MIPS: Add initial support for Lexra/RLX cpu
Lexra/RLX processors are MIPS R3000 class processor subsystem
which executes MIPS-I ISA (except unaligned loads, stores). This
processors support 32-bit coprocessor operations. Here I added
support for the processors below which are used mostly in various
Realtek SoCs-

LX4180, RLX4181, RLX4281, RLX5181, LX5280, RLX5281

Signed-off-by: Shibajee Roy <ador250@protonmail.com>

 Changes in this commit:
	modified:   gcc/config/mips/mips-cpus.def
	modified:   gcc/config/mips/mips-tables.opt
	modified:   gcc/config/mips/mips.c
	modified:   gcc/config/mips/mips.h
	modified:   gcc/config/mips/mips.md
	modified:   gcc/doc/invoke.texi

--- a/gcc/doc/invoke.texi
+++ b/gcc/doc/invoke.texi
@@ -21659,6 +21659,8 @@ The processor names are:
 @samp{r6000}, @samp{r8000},
 @samp{rm7000}, @samp{rm9000},
 @samp{r10000}, @samp{r12000}, @samp{r14000}, @samp{r16000},
+@samp{lx4180}, @samp{rlx4181}, @samp{rlx4281}, @samp{rlx5181},
+@samp{lx5280}, @samp{rlx5281},
 @samp{sb1},
 @samp{sr71000},
 @samp{vr4100}, @samp{vr4111}, @samp{vr4120}, @samp{vr4130}, @samp{vr4300},
